--- a/style/style.css
+++ b/style/style.css
@@ -77,7 +77,7 @@
     margin-top: 1em;
 }
 
-@media (max-width:914px) and (min-width:375px) {
+@media (min-width:375px) and (max-width:900px){
     .list{
         display: flex;
         flex-direction: column;
@@ -86,5 +86,14 @@
         background-color: #05668d;
         list-style: none;
         padding: 1em;
+    }
+    .show-search .search{
+        font-size: 1em;
+        padding: 0em 1em 0em 0.1em;
+        margin-right: 0.2em;
+        border: 3px solid #2ec4b6;
+        transition: all 0.2s;
+        border-radius: 0.3em;
+        cursor: pointer;
     }
 }
