--- a/style/style.css
+++ b/style/style.css
@@ -77,16 +77,7 @@
     margin-top: 1em;
 }
 
-@media (min-width:375px) and (max-width:900px){
-    .list{
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-        align-content: space-around;
-        background-color: #05668d;
-        list-style: none;
-        padding: 1em;
-    }
+@media (max-width:375px){
     .show-search .search{
         font-size: 1em;
         padding: 0em 1em 0em 0.1em;
