--- a/style/style.css
+++ b/style/style.css
@@ -89,7 +89,7 @@
     }
     .show-img{
         border: 3px solid black;
-        margin-left: 20%;
+        margin-left: 10em;
         margin-top: 1em;
     }
 }
